TestSuite/errors/err0326.pas
{$includenamespace namespaces/err0326.pas}
begin

end.